Basic display of humanoid hit locations

--- a/templates/actor/actor-sheet.html
+++ b/templates/actor/actor-sheet.html
@@ -488,7 +488,7 @@
 			</div>
 
 			{{!-- Armour Display Tab --}}
-			<div class="tab stats" data-tab="armour-display" data-group="primary">
+			<div class="tab stats" data-tab="armour-display" data-group="primary" style="display: flex">
 				<div class="humanoidHitLocations">
 					<div class="location-skull">## / ##</div>
 					<div class="location-ear-left">## / ##</div>
@@ -497,6 +497,7 @@
 					<div class="location-eye-right">## / ##</div>
 					<div class="location-cheek-left">## / ##</div>
 					<div class="location-cheek-right">## / ##</div>
+					<div class="location-cheek-fill"></div>
 					<div class="location-nose">## / ##</div>
 					<div class="location-jaw">## / ##</div>
 					<div class="location-neck">## / ##</div>
@@ -512,7 +513,26 @@
 					<div class="location-wrist-right">## / ##</div>
 					<div class="location-hand-left">## / ##</div>
 					<div class="location-hand-right">## / ##</div>
+					<div class="location-torso">## / ##</div>
+					<div class="location-torso-vitals">## / ##</div>
+					<div class="location-abdomen-vitals">## / ##</div>
+					<div class="location-digestive">## / ##</div>
+					<div class="location-pelvis">## / ##</div>
+					<div class="location-groin">## / ##</div>
+					<div class="location-thigh-left">## / ##</div>
+					<div class="location-thigh-right">## / ##</div>
+					<div class="location-knee-left">## / ##</div>
+					<div class="location-knee-right">## / ##</div>
+					<div class="location-shin-left">## / ##</div>
+					<div class="location-shin-right">## / ##</div>
+					<div class="location-ankle-left">## / ##</div>
+					<div class="location-ankle-right">## / ##</div>
+					<div class="location-foot-left">## / ##</div>
+					<div class="location-foot-right">## / ##</div>
+					<div class="location-sole-left">## / ##</div>
+					<div class="location-sole-right">## / ##</div>
 				</div>
+				<div class="hit-location-options">Test</div>
 			</div>
 
 			{{!-- Body Type Tab --}}
