Refactoring var names to better describe what's going on Added flexible checkbox

--- a/templates/actor/actor-sheet.html
+++ b/templates/actor/actor-sheet.html
@@ -491,47 +491,47 @@
 			<div id="armour-display" class="tab armour-display" data-tab="armour-display" data-group="primary">
 				<div style="display: flex">
 					<div class="humanoidHitLocations">
-						<div class="location-skull">{{data.bodyType.damageTypesOne.skull}} / {{data.bodyType.damageTypesTwo.skull}}</div>
-						<div class="location-ear-left">{{data.bodyType.damageTypesOne.faceears}} / {{data.bodyType.damageTypesTwo.faceears}}</div>
-						<div class="location-ear-right">{{data.bodyType.damageTypesOne.faceears}} / {{data.bodyType.damageTypesTwo.faceears}}</div>
-						<div class="location-eye-left">{{data.bodyType.damageTypesOne.faceeyes}} / {{data.bodyType.damageTypesTwo.faceeyes}}</div>
-						<div class="location-eye-right">{{data.bodyType.damageTypesOne.faceeyes}} / {{data.bodyType.damageTypesTwo.faceeyes}}</div>
-						<div class="location-cheek-left">{{data.bodyType.damageTypesOne.facecheek}} / {{data.bodyType.damageTypesTwo.facecheek}}</div>
-						<div class="location-cheek-right">{{data.bodyType.damageTypesOne.facecheek}} / {{data.bodyType.damageTypesTwo.facecheek}}</div>
+						<div class="location-skull">{{data.bodyType.drTypesOne.skull}} / {{data.bodyType.drTypesTwo.skull}}</div>
+						<div class="location-ear-left">{{data.bodyType.drTypesOne.faceears}} / {{data.bodyType.drTypesTwo.faceears}}</div>
+						<div class="location-ear-right">{{data.bodyType.drTypesOne.faceears}} / {{data.bodyType.drTypesTwo.faceears}}</div>
+						<div class="location-eye-left">{{data.bodyType.drTypesOne.faceeyes}} / {{data.bodyType.drTypesTwo.faceeyes}}</div>
+						<div class="location-eye-right">{{data.bodyType.drTypesOne.faceeyes}} / {{data.bodyType.drTypesTwo.faceeyes}}</div>
+						<div class="location-cheek-left">{{data.bodyType.drTypesOne.facecheek}} / {{data.bodyType.drTypesTwo.facecheek}}</div>
+						<div class="location-cheek-right">{{data.bodyType.drTypesOne.facecheek}} / {{data.bodyType.drTypesTwo.facecheek}}</div>
 						<div class="location-cheek-fill"></div>
-						<div class="location-nose">{{data.bodyType.damageTypesOne.facenose}} / {{data.bodyType.damageTypesTwo.facenose}}</div>
-						<div class="location-jaw">{{data.bodyType.damageTypesOne.facejaw}} / {{data.bodyType.damageTypesTwo.facejaw}}</div>
-						<div class="location-neck">{{data.bodyType.damageTypesOne.neckneck}} / {{data.bodyType.damageTypesTwo.neckneck}}</div>
-						<div class="location-shoulder-left">{{data.bodyType.damageTypesOne.armLeftshoulder}} / {{data.bodyType.damageTypesTwo.armLeftshoulder}}</div>
-						<div class="location-shoulder-right">{{data.bodyType.damageTypesOne.armRightshoulder}} / {{data.bodyType.damageTypesTwo.armRightshoulder}}</div>
-						<div class="location-upper-arm-left">{{data.bodyType.damageTypesOne.armLeftupperArm}} / {{data.bodyType.damageTypesTwo.armLeftupperArm}}</div>
-						<div class="location-upper-arm-right">{{data.bodyType.damageTypesOne.armRightupperArm}} / {{data.bodyType.damageTypesTwo.armRightupperArm}}</div>
-						<div class="location-elbow-left">{{data.bodyType.damageTypesOne.armLeftelbow}} / {{data.bodyType.damageTypesTwo.armLeftelbow}}</div>
-						<div class="location-elbow-right">{{data.bodyType.damageTypesOne.armRightelbow}} / {{data.bodyType.damageTypesTwo.armRightelbow}}</div>
-						<div class="location-forearm-left">{{data.bodyType.damageTypesOne.armLeftforearm}} / {{data.bodyType.damageTypesTwo.armLeftforearm}}</div>
-						<div class="location-forearm-right">{{data.bodyType.damageTypesOne.armRightforearm}} / {{data.bodyType.damageTypesTwo.armRightforearm}}</div>
-						<div class="location-wrist-left">{{data.bodyType.damageTypesOne.handLeftjoint}} / {{data.bodyType.damageTypesTwo.handLeftjoint}}</div>
-						<div class="location-wrist-right">{{data.bodyType.damageTypesOne.handRightjoint}} / {{data.bodyType.damageTypesTwo.handRightjoint}}</div>
-						<div class="location-hand-left">{{data.bodyType.damageTypesOne.handLeftextremity}} / {{data.bodyType.damageTypesTwo.handLeftextremity}}</div>
-						<div class="location-hand-right">{{data.bodyType.damageTypesOne.handRightextremity}} / {{data.bodyType.damageTypesTwo.handRightextremity}}</div>
-						<div class="location-torso">{{data.bodyType.damageTypesOne.chestchest}} / {{data.bodyType.damageTypesTwo.chestchest}}</div>
-						<div class="location-torso-vitals">{{data.bodyType.damageTypesOne.chestvitals}} / {{data.bodyType.damageTypesTwo.chestvitals}}</div>
-						<div class="location-abdomen-vitals">{{data.bodyType.damageTypesOne.abdomenvitals}} / {{data.bodyType.damageTypesTwo.abdomenvitals}}</div>
-						<div class="location-digestive">{{data.bodyType.damageTypesOne.abdomendigestiveTract}} / {{data.bodyType.damageTypesTwo.abdomendigestiveTract}}</div>
-						<div class="location-pelvis">{{data.bodyType.damageTypesOne.abdomenpelvis}} / {{data.bodyType.damageTypesTwo.abdomenpelvis}}</div>
-						<div class="location-groin">{{data.bodyType.damageTypesOne.abdomengroin}} / {{data.bodyType.damageTypesTwo.abdomengroin}}</div>
-						<div class="location-thigh-left">{{data.bodyType.damageTypesOne.legLeftthigh}} / {{data.bodyType.damageTypesTwo.legLeftthigh}}</div>
-						<div class="location-thigh-right">{{data.bodyType.damageTypesOne.legRightthigh}} / {{data.bodyType.damageTypesTwo.legRightthigh}}</div>
-						<div class="location-knee-left">{{data.bodyType.damageTypesOne.legLeftknee}} / {{data.bodyType.damageTypesTwo.legLeftknee}}</div>
-						<div class="location-knee-right">{{data.bodyType.damageTypesOne.legRightknee}} / {{data.bodyType.damageTypesTwo.legRightknee}}</div>
-						<div class="location-shin-left">{{data.bodyType.damageTypesOne.legLeftshin}} / {{data.bodyType.damageTypesTwo.legLeftshin}}</div>
-						<div class="location-shin-right">{{data.bodyType.damageTypesOne.legRightshin}} / {{data.bodyType.damageTypesTwo.legRightshin}}</div>
-						<div class="location-ankle-left">{{data.bodyType.damageTypesOne.footLeftjoint}} / {{data.bodyType.damageTypesTwo.footLeftjoint}}</div>
-						<div class="location-ankle-right">{{data.bodyType.damageTypesOne.footRightjoint}} / {{data.bodyType.damageTypesTwo.footRightjoint}}</div>
-						<div class="location-foot-left">{{data.bodyType.damageTypesOne.footLeftextremity}} / {{data.bodyType.damageTypesTwo.footLeftextremity}}</div>
-						<div class="location-foot-right">{{data.bodyType.damageTypesOne.footRightextremity}} / {{data.bodyType.damageTypesTwo.footRightextremity}}</div>
-						<div class="location-sole-left">{{data.bodyType.damageTypesOne.footLeftextremity}} / {{data.bodyType.damageTypesTwo.footLeftextremity}}</div>
-						<div class="location-sole-right">{{data.bodyType.damageTypesOne.footRightextremity}} / {{data.bodyType.damageTypesTwo.footRightextremity}}</div>
+						<div class="location-nose">{{data.bodyType.drTypesOne.facenose}} / {{data.bodyType.drTypesTwo.facenose}}</div>
+						<div class="location-jaw">{{data.bodyType.drTypesOne.facejaw}} / {{data.bodyType.drTypesTwo.facejaw}}</div>
+						<div class="location-neck">{{data.bodyType.drTypesOne.neckneck}} / {{data.bodyType.drTypesTwo.neckneck}}</div>
+						<div class="location-shoulder-left">{{data.bodyType.drTypesOne.armLeftshoulder}} / {{data.bodyType.drTypesTwo.armLeftshoulder}}</div>
+						<div class="location-shoulder-right">{{data.bodyType.drTypesOne.armRightshoulder}} / {{data.bodyType.drTypesTwo.armRightshoulder}}</div>
+						<div class="location-upper-arm-left">{{data.bodyType.drTypesOne.armLeftupperArm}} / {{data.bodyType.drTypesTwo.armLeftupperArm}}</div>
+						<div class="location-upper-arm-right">{{data.bodyType.drTypesOne.armRightupperArm}} / {{data.bodyType.drTypesTwo.armRightupperArm}}</div>
+						<div class="location-elbow-left">{{data.bodyType.drTypesOne.armLeftelbow}} / {{data.bodyType.drTypesTwo.armLeftelbow}}</div>
+						<div class="location-elbow-right">{{data.bodyType.drTypesOne.armRightelbow}} / {{data.bodyType.drTypesTwo.armRightelbow}}</div>
+						<div class="location-forearm-left">{{data.bodyType.drTypesOne.armLeftforearm}} / {{data.bodyType.drTypesTwo.armLeftforearm}}</div>
+						<div class="location-forearm-right">{{data.bodyType.drTypesOne.armRightforearm}} / {{data.bodyType.drTypesTwo.armRightforearm}}</div>
+						<div class="location-wrist-left">{{data.bodyType.drTypesOne.handLeftjoint}} / {{data.bodyType.drTypesTwo.handLeftjoint}}</div>
+						<div class="location-wrist-right">{{data.bodyType.drTypesOne.handRightjoint}} / {{data.bodyType.drTypesTwo.handRightjoint}}</div>
+						<div class="location-hand-left">{{data.bodyType.drTypesOne.handLeftextremity}} / {{data.bodyType.drTypesTwo.handLeftextremity}}</div>
+						<div class="location-hand-right">{{data.bodyType.drTypesOne.handRightextremity}} / {{data.bodyType.drTypesTwo.handRightextremity}}</div>
+						<div class="location-torso">{{data.bodyType.drTypesOne.chestchest}} / {{data.bodyType.drTypesTwo.chestchest}}</div>
+						<div class="location-torso-vitals">{{data.bodyType.drTypesOne.chestvitals}} / {{data.bodyType.drTypesTwo.chestvitals}}</div>
+						<div class="location-abdomen-vitals">{{data.bodyType.drTypesOne.abdomenvitals}} / {{data.bodyType.drTypesTwo.abdomenvitals}}</div>
+						<div class="location-digestive">{{data.bodyType.drTypesOne.abdomendigestiveTract}} / {{data.bodyType.drTypesTwo.abdomendigestiveTract}}</div>
+						<div class="location-pelvis">{{data.bodyType.drTypesOne.abdomenpelvis}} / {{data.bodyType.drTypesTwo.abdomenpelvis}}</div>
+						<div class="location-groin">{{data.bodyType.drTypesOne.abdomengroin}} / {{data.bodyType.drTypesTwo.abdomengroin}}</div>
+						<div class="location-thigh-left">{{data.bodyType.drTypesOne.legLeftthigh}} / {{data.bodyType.drTypesTwo.legLeftthigh}}</div>
+						<div class="location-thigh-right">{{data.bodyType.drTypesOne.legRightthigh}} / {{data.bodyType.drTypesTwo.legRightthigh}}</div>
+						<div class="location-knee-left">{{data.bodyType.drTypesOne.legLeftknee}} / {{data.bodyType.drTypesTwo.legLeftknee}}</div>
+						<div class="location-knee-right">{{data.bodyType.drTypesOne.legRightknee}} / {{data.bodyType.drTypesTwo.legRightknee}}</div>
+						<div class="location-shin-left">{{data.bodyType.drTypesOne.legLeftshin}} / {{data.bodyType.drTypesTwo.legLeftshin}}</div>
+						<div class="location-shin-right">{{data.bodyType.drTypesOne.legRightshin}} / {{data.bodyType.drTypesTwo.legRightshin}}</div>
+						<div class="location-ankle-left">{{data.bodyType.drTypesOne.footLeftjoint}} / {{data.bodyType.drTypesTwo.footLeftjoint}}</div>
+						<div class="location-ankle-right">{{data.bodyType.drTypesOne.footRightjoint}} / {{data.bodyType.drTypesTwo.footRightjoint}}</div>
+						<div class="location-foot-left">{{data.bodyType.drTypesOne.footLeftextremity}} / {{data.bodyType.drTypesTwo.footLeftextremity}}</div>
+						<div class="location-foot-right">{{data.bodyType.drTypesOne.footRightextremity}} / {{data.bodyType.drTypesTwo.footRightextremity}}</div>
+						<div class="location-sole-left">{{data.bodyType.drTypesOne.footLeftextremity}} / {{data.bodyType.drTypesTwo.footLeftextremity}}</div>
+						<div class="location-sole-right">{{data.bodyType.drTypesOne.footRightextremity}} / {{data.bodyType.drTypesTwo.footRightextremity}}</div>
 					</div>
 					<div class="hit-location-options">
 						<div>
@@ -658,6 +658,7 @@
 				<table>
 					<tr class="hit-locations">
 						<td></td>
+						<td></td>
 						<td class="dr-damage-types">Burn</td>
 						<td class="dr-damage-types">Cor</td>
 						<td class="dr-damage-types">Cr</td>
@@ -670,6 +671,7 @@
 					</tr>
 					<tr class="hit-locations">
 						<td class="dr-header"></td>
+						<td class="dr-header">Flex</td>
 						<td class="dr-header">DR/Hard</td>
 						<td class="dr-header">DR/Hard</td>
 						<td class="dr-header">DR/Hard</td>
@@ -699,6 +701,9 @@
 							{{#each bodyPart.subLocation as |subLocation locationId|}}<!--Loop through the sublocations-->
 								<tr class="hit-locations">
 									<td class="dr-row">{{subLocation.label}}</td>
+									<td class="dr-row">
+										<input type="checkbox" name="data.bodyType.body.{{partId}}.subLocation.{{locationId}}.flexible" {{checked subLocation.flexible}} data-dtype="Boolean" style="width: 100%;"/>
+									</td>
 									<td class="dr-row">
 										<input type="number" name="data.bodyType.body.{{partId}}.subLocation.{{locationId}}.personalDRBurn" value="{{subLocation.personalDRBurn}}" data-dtype="Number" />
 										<input type="number" name="data.bodyType.body.{{partId}}.subLocation.{{locationId}}.personalDRHardeningBurn" value="{{subLocation.personalDRHardeningBurn}}" data-dtype="Number" />
@@ -745,6 +750,9 @@
 						{{else}}<!--Display details for parts without sublocations (Pretty much only the skull and brian)-->
 							<tr class="hit-locations">
 								<td class="dr-row">{{bodyPart.label}}</td>
+								<td class="dr-row">
+									<input type="checkbox" name="data.bodyType.body.{{partId}}.flexible" {{checked bodyPart.flexible}} data-dtype="Boolean" style="width: 100%;"/>
+								</td>
 								<td class="dr-row">
 									<input type="number" name="data.bodyType.body.{{partId}}.personalDRBurn" value="{{bodyPart.personalDRBurn}}" data-dtype="Number" />
 									<input type="number" name="data.bodyType.body.{{partId}}.personalDRHardeningBurn" value="{{bodyPart.personalDRHardeningBurn}}" data-dtype="Number" />
