--- a/templates/actor/actor-sheet.html
+++ b/templates/actor/actor-sheet.html
@@ -491,47 +491,47 @@
 			<div id="armour-display" class="tab armour-display" data-tab="armour-display" data-group="primary">
 				<div style="display: flex">
 					<div class="humanoidHitLocations">
-						<div class="location-skull">{{data.bodyType.drTypesOne.skull}} / {{data.bodyType.drTypesTwo.skull}}</div>
-						<div class="location-ear-left">{{data.bodyType.drTypesOne.faceears}} / {{data.bodyType.drTypesTwo.faceears}}</div>
-						<div class="location-ear-right">{{data.bodyType.drTypesOne.faceears}} / {{data.bodyType.drTypesTwo.faceears}}</div>
-						<div class="location-eye-left">{{data.bodyType.drTypesOne.faceeyes}} / {{data.bodyType.drTypesTwo.faceeyes}}</div>
-						<div class="location-eye-right">{{data.bodyType.drTypesOne.faceeyes}} / {{data.bodyType.drTypesTwo.faceeyes}}</div>
-						<div class="location-cheek-left">{{data.bodyType.drTypesOne.facecheek}} / {{data.bodyType.drTypesTwo.facecheek}}</div>
-						<div class="location-cheek-right">{{data.bodyType.drTypesOne.facecheek}} / {{data.bodyType.drTypesTwo.facecheek}}</div>
+						<div class="tooltip location-skull">{{data.bodyType.drTypesOne.skull}} / {{data.bodyType.drTypesTwo.skull}}<span class="tooltiptext">Test</span></div>
+						<div class="tooltip location-ear-left">{{data.bodyType.drTypesOne.faceears}} / {{data.bodyType.drTypesTwo.faceears}}<span class="tooltiptext"></span></div>
+						<div class="tooltip location-ear-right">{{data.bodyType.drTypesOne.faceears}} / {{data.bodyType.drTypesTwo.faceears}}<span class="tooltiptext"></span></div>
+						<div class="tooltip location-eye-left">{{data.bodyType.drTypesOne.faceeyes}} / {{data.bodyType.drTypesTwo.faceeyes}}<span class="tooltiptext"></span></div>
+						<div class="tooltip location-eye-right">{{data.bodyType.drTypesOne.faceeyes}} / {{data.bodyType.drTypesTwo.faceeyes}}<span class="tooltiptext"></span></div>
+						<div class="tooltip location-cheek-left">{{data.bodyType.drTypesOne.facecheek}} / {{data.bodyType.drTypesTwo.facecheek}}<span class="tooltiptext"></span></div>
+						<div class="tooltip location-cheek-right">{{data.bodyType.drTypesOne.facecheek}} / {{data.bodyType.drTypesTwo.facecheek}}<span class="tooltiptext"></span></div>
 						<div class="location-cheek-fill"></div>
-						<div class="location-nose">{{data.bodyType.drTypesOne.facenose}} / {{data.bodyType.drTypesTwo.facenose}}</div>
-						<div class="location-jaw">{{data.bodyType.drTypesOne.facejaw}} / {{data.bodyType.drTypesTwo.facejaw}}</div>
-						<div class="location-neck">{{data.bodyType.drTypesOne.neckneck}} / {{data.bodyType.drTypesTwo.neckneck}}</div>
-						<div class="location-shoulder-left">{{data.bodyType.drTypesOne.armLeftshoulder}} / {{data.bodyType.drTypesTwo.armLeftshoulder}}</div>
-						<div class="location-shoulder-right">{{data.bodyType.drTypesOne.armRightshoulder}} / {{data.bodyType.drTypesTwo.armRightshoulder}}</div>
-						<div class="location-upper-arm-left">{{data.bodyType.drTypesOne.armLeftupperArm}} / {{data.bodyType.drTypesTwo.armLeftupperArm}}</div>
-						<div class="location-upper-arm-right">{{data.bodyType.drTypesOne.armRightupperArm}} / {{data.bodyType.drTypesTwo.armRightupperArm}}</div>
-						<div class="location-elbow-left">{{data.bodyType.drTypesOne.armLeftelbow}} / {{data.bodyType.drTypesTwo.armLeftelbow}}</div>
-						<div class="location-elbow-right">{{data.bodyType.drTypesOne.armRightelbow}} / {{data.bodyType.drTypesTwo.armRightelbow}}</div>
-						<div class="location-forearm-left">{{data.bodyType.drTypesOne.armLeftforearm}} / {{data.bodyType.drTypesTwo.armLeftforearm}}</div>
-						<div class="location-forearm-right">{{data.bodyType.drTypesOne.armRightforearm}} / {{data.bodyType.drTypesTwo.armRightforearm}}</div>
-						<div class="location-wrist-left">{{data.bodyType.drTypesOne.handLeftjoint}} / {{data.bodyType.drTypesTwo.handLeftjoint}}</div>
-						<div class="location-wrist-right">{{data.bodyType.drTypesOne.handRightjoint}} / {{data.bodyType.drTypesTwo.handRightjoint}}</div>
-						<div class="location-hand-left">{{data.bodyType.drTypesOne.handLeftextremity}} / {{data.bodyType.drTypesTwo.handLeftextremity}}</div>
-						<div class="location-hand-right">{{data.bodyType.drTypesOne.handRightextremity}} / {{data.bodyType.drTypesTwo.handRightextremity}}</div>
-						<div class="location-torso">{{data.bodyType.drTypesOne.chestchest}} / {{data.bodyType.drTypesTwo.chestchest}}</div>
-						<div class="location-torso-vitals">{{data.bodyType.drTypesOne.chestvitals}} / {{data.bodyType.drTypesTwo.chestvitals}}</div>
-						<div class="location-abdomen-vitals">{{data.bodyType.drTypesOne.abdomenvitals}} / {{data.bodyType.drTypesTwo.abdomenvitals}}</div>
-						<div class="location-digestive">{{data.bodyType.drTypesOne.abdomendigestiveTract}} / {{data.bodyType.drTypesTwo.abdomendigestiveTract}}</div>
-						<div class="location-pelvis">{{data.bodyType.drTypesOne.abdomenpelvis}} / {{data.bodyType.drTypesTwo.abdomenpelvis}}</div>
-						<div class="location-groin">{{data.bodyType.drTypesOne.abdomengroin}} / {{data.bodyType.drTypesTwo.abdomengroin}}</div>
-						<div class="location-thigh-left">{{data.bodyType.drTypesOne.legLeftthigh}} / {{data.bodyType.drTypesTwo.legLeftthigh}}</div>
-						<div class="location-thigh-right">{{data.bodyType.drTypesOne.legRightthigh}} / {{data.bodyType.drTypesTwo.legRightthigh}}</div>
-						<div class="location-knee-left">{{data.bodyType.drTypesOne.legLeftknee}} / {{data.bodyType.drTypesTwo.legLeftknee}}</div>
-						<div class="location-knee-right">{{data.bodyType.drTypesOne.legRightknee}} / {{data.bodyType.drTypesTwo.legRightknee}}</div>
-						<div class="location-shin-left">{{data.bodyType.drTypesOne.legLeftshin}} / {{data.bodyType.drTypesTwo.legLeftshin}}</div>
-						<div class="location-shin-right">{{data.bodyType.drTypesOne.legRightshin}} / {{data.bodyType.drTypesTwo.legRightshin}}</div>
-						<div class="location-ankle-left">{{data.bodyType.drTypesOne.footLeftjoint}} / {{data.bodyType.drTypesTwo.footLeftjoint}}</div>
-						<div class="location-ankle-right">{{data.bodyType.drTypesOne.footRightjoint}} / {{data.bodyType.drTypesTwo.footRightjoint}}</div>
-						<div class="location-foot-left">{{data.bodyType.drTypesOne.footLeftextremity}} / {{data.bodyType.drTypesTwo.footLeftextremity}}</div>
-						<div class="location-foot-right">{{data.bodyType.drTypesOne.footRightextremity}} / {{data.bodyType.drTypesTwo.footRightextremity}}</div>
-						<div class="location-sole-left">{{data.bodyType.drTypesOne.footLeftextremity}} / {{data.bodyType.drTypesTwo.footLeftextremity}}</div>
-						<div class="location-sole-right">{{data.bodyType.drTypesOne.footRightextremity}} / {{data.bodyType.drTypesTwo.footRightextremity}}</div>
+						<div class="tooltip location-nose">{{data.bodyType.drTypesOne.facenose}} / {{data.bodyType.drTypesTwo.facenose}}<span class="tooltiptext"></span></div>
+						<div class="tooltip location-jaw">{{data.bodyType.drTypesOne.facejaw}} / {{data.bodyType.drTypesTwo.facejaw}}<span class="tooltiptext"></span></div>
+						<div class="tooltip location-neck">{{data.bodyType.drTypesOne.neckneck}} / {{data.bodyType.drTypesTwo.neckneck}}<span class="tooltiptext"></span></div>
+						<div class="tooltip location-shoulder-left">{{data.bodyType.drTypesOne.armLeftshoulder}} / {{data.bodyType.drTypesTwo.armLeftshoulder}}<span class="tooltiptext"></span></div>
+						<div class="tooltip location-shoulder-right">{{data.bodyType.drTypesOne.armRightshoulder}} / {{data.bodyType.drTypesTwo.armRightshoulder}}<span class="tooltiptext"></span></div>
+						<div class="tooltip location-upper-arm-left">{{data.bodyType.drTypesOne.armLeftupperArm}} / {{data.bodyType.drTypesTwo.armLeftupperArm}}<span class="tooltiptext"></span></div>
+						<div class="tooltip location-upper-arm-right">{{data.bodyType.drTypesOne.armRightupperArm}} / {{data.bodyType.drTypesTwo.armRightupperArm}}<span class="tooltiptext"></span></div>
+						<div class="tooltip location-elbow-left">{{data.bodyType.drTypesOne.armLeftelbow}} / {{data.bodyType.drTypesTwo.armLeftelbow}}<span class="tooltiptext"></span></div>
+						<div class="tooltip location-elbow-right">{{data.bodyType.drTypesOne.armRightelbow}} / {{data.bodyType.drTypesTwo.armRightelbow}}<span class="tooltiptext"></span></div>
+						<div class="tooltip location-forearm-left">{{data.bodyType.drTypesOne.armLeftforearm}} / {{data.bodyType.drTypesTwo.armLeftforearm}}<span class="tooltiptext"></span></div>
+						<div class="tooltip location-forearm-right">{{data.bodyType.drTypesOne.armRightforearm}} / {{data.bodyType.drTypesTwo.armRightforearm}}<span class="tooltiptext"></span></div>
+						<div class="tooltip location-wrist-left">{{data.bodyType.drTypesOne.handLeftjoint}} / {{data.bodyType.drTypesTwo.handLeftjoint}}<span class="tooltiptext"></span></div>
+						<div class="tooltip location-wrist-right">{{data.bodyType.drTypesOne.handRightjoint}} / {{data.bodyType.drTypesTwo.handRightjoint}}<span class="tooltiptext"></span></div>
+						<div class="tooltip location-hand-left">{{data.bodyType.drTypesOne.handLeftextremity}} / {{data.bodyType.drTypesTwo.handLeftextremity}}<span class="tooltiptext"></span></div>
+						<div class="tooltip location-hand-right">{{data.bodyType.drTypesOne.handRightextremity}} / {{data.bodyType.drTypesTwo.handRightextremity}}<span class="tooltiptext"></span></div>
+						<div class="tooltip location-torso">{{data.bodyType.drTypesOne.chestchest}} / {{data.bodyType.drTypesTwo.chestchest}}<span class="tooltiptext"></span></div>
+						<div class="tooltip location-torso-vitals">{{data.bodyType.drTypesOne.chestvitals}} / {{data.bodyType.drTypesTwo.chestvitals}}<span class="tooltiptext"></span></div>
+						<div class="tooltip location-abdomen-vitals">{{data.bodyType.drTypesOne.abdomenvitals}} / {{data.bodyType.drTypesTwo.abdomenvitals}}<span class="tooltiptext"></span></div>
+						<div class="tooltip location-digestive">{{data.bodyType.drTypesOne.abdomendigestiveTract}} / {{data.bodyType.drTypesTwo.abdomendigestiveTract}}<span class="tooltiptext"></span></div>
+						<div class="tooltip location-pelvis">{{data.bodyType.drTypesOne.abdomenpelvis}} / {{data.bodyType.drTypesTwo.abdomenpelvis}}<span class="tooltiptext"></span></div>
+						<div class="tooltip location-groin">{{data.bodyType.drTypesOne.abdomengroin}} / {{data.bodyType.drTypesTwo.abdomengroin}}<span class="tooltiptext"></span></div>
+						<div class="tooltip location-thigh-left">{{data.bodyType.drTypesOne.legLeftthigh}} / {{data.bodyType.drTypesTwo.legLeftthigh}}<span class="tooltiptext"></span></div>
+						<div class="tooltip location-thigh-right">{{data.bodyType.drTypesOne.legRightthigh}} / {{data.bodyType.drTypesTwo.legRightthigh}}<span class="tooltiptext"></span></div>
+						<div class="tooltip location-knee-left">{{data.bodyType.drTypesOne.legLeftknee}} / {{data.bodyType.drTypesTwo.legLeftknee}}<span class="tooltiptext"></span></div>
+						<div class="tooltip location-knee-right">{{data.bodyType.drTypesOne.legRightknee}} / {{data.bodyType.drTypesTwo.legRightknee}}<span class="tooltiptext"></span></div>
+						<div class="tooltip location-shin-left">{{data.bodyType.drTypesOne.legLeftshin}} / {{data.bodyType.drTypesTwo.legLeftshin}}<span class="tooltiptext"></span></div>
+						<div class="tooltip location-shin-right">{{data.bodyType.drTypesOne.legRightshin}} / {{data.bodyType.drTypesTwo.legRightshin}}<span class="tooltiptext"></span></div>
+						<div class="tooltip location-ankle-left">{{data.bodyType.drTypesOne.footLeftjoint}} / {{data.bodyType.drTypesTwo.footLeftjoint}}<span class="tooltiptext"></span></div>
+						<div class="tooltip location-ankle-right">{{data.bodyType.drTypesOne.footRightjoint}} / {{data.bodyType.drTypesTwo.footRightjoint}}<span class="tooltiptext"></span></div>
+						<div class="tooltip location-foot-left">{{data.bodyType.drTypesOne.footLeftextremity}} / {{data.bodyType.drTypesTwo.footLeftextremity}}<span class="tooltiptext"></span></div>
+						<div class="tooltip location-foot-right">{{data.bodyType.drTypesOne.footRightextremity}} / {{data.bodyType.drTypesTwo.footRightextremity}}<span class="tooltiptext"></span></div>
+						<div class="tooltip location-sole-left">{{data.bodyType.drTypesOne.footLeftextremity}} / {{data.bodyType.drTypesTwo.footLeftextremity}}<span class="tooltiptext"></span></div>
+						<div class="tooltip location-sole-right">{{data.bodyType.drTypesOne.footRightextremity}} / {{data.bodyType.drTypesTwo.footRightextremity}}<span class="tooltiptext"></span></div>
 					</div>
 					<div class="hit-location-options">
 						<div>
@@ -686,7 +686,7 @@
 					</tr>
 					{{#each actor.data.bodyType.body as |bodyPart partId|}}<!--Loop through the body parts-->
 						<tr class="hit-locations master-location">
-							<td colspan="9">{{bodyPart.label}}</td>
+							<td colspan="10">{{bodyPart.label}}</td>
 							{{#if bodyPart.hp}}
 								<td class="dr-row">
 									<input type="number" class="partHP" id="data.bodyType.body.{{partId}}.hp" name="data.bodyType.body.{{partId}}.hp.value" value="{{bodyPart.hp.value}}" data-dtype="Number" style="width: 50%;"/>
