--- a/templates/actor/actor-sheet.html
+++ b/templates/actor/actor-sheet.html
@@ -516,6 +516,7 @@
 						<div class="tooltip location-hand-right">{{data.bodyType.drTypesOne.handRightextremity}} / {{data.bodyType.drTypesTwo.handRightextremity}}<span class="tooltiptext"></span></div>
 						<div class="tooltip location-torso">{{data.bodyType.drTypesOne.chestchest}} / {{data.bodyType.drTypesTwo.chestchest}}<span class="tooltiptext"></span></div>
 						<div class="tooltip location-torso-vitals">{{data.bodyType.drTypesOne.chestvitals}} / {{data.bodyType.drTypesTwo.chestvitals}}<span class="tooltiptext"></span></div>
+						<div class="tooltip location-torso-spine">{{data.bodyType.drTypesOne.chestspine}} / {{data.bodyType.drTypesTwo.chestspine}}<span class="tooltiptext"></span></div>
 						<div class="tooltip location-abdomen-vitals">{{data.bodyType.drTypesOne.abdomenvitals}} / {{data.bodyType.drTypesTwo.abdomenvitals}}<span class="tooltiptext"></span></div>
 						<div class="tooltip location-digestive">{{data.bodyType.drTypesOne.abdomendigestiveTract}} / {{data.bodyType.drTypesTwo.abdomendigestiveTract}}<span class="tooltiptext"></span></div>
 						<div class="tooltip location-pelvis">{{data.bodyType.drTypesOne.abdomenpelvis}} / {{data.bodyType.drTypesTwo.abdomenpelvis}}<span class="tooltiptext"></span></div>
